--- a/public/layout.css
+++ b/public/layout.css
@@ -66,7 +66,7 @@ footer {
 }
 
 .buttons {
-    grid-auto-columns: 50%;
+    grid-auto-columns: 100%;
     padding: 15px;
     display: grid;
     max-width: 1100px;
